--- a/Pantarevir/Base.lproj/Main.storyboard
+++ b/Pantarevir/Base.lproj/Main.storyboard
@@ -965,13 +965,13 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6B9-FN-7F4">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OW3-FS-EwC">
-                                <rect key="frame" x="9" y="23" width="32" height="32"/>
+                            <button opaque="NO" alpha="0.65000000000000002" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OW3-FS-EwC">
+                                <rect key="frame" x="5" y="20" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="Km7-8q-fY6"/>
-                                    <constraint firstAttribute="width" constant="32" id="luL-64-ulq"/>
+                                    <constraint firstAttribute="height" constant="40" id="3nC-aM-5kh"/>
+                                    <constraint firstAttribute="width" constant="40" id="Ep2-XY-oiG"/>
                                 </constraints>
-                                <state key="normal" image="back_arrow_dropshadow copy">
+                                <state key="normal" image="back_arrow">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
@@ -981,13 +981,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="6B9-FN-7F4" firstAttribute="bottom" secondItem="I1h-VO-hFM" secondAttribute="top" id="6OK-1N-8qQ"/>
-                            <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="OW3-FS-EwC" secondAttribute="bottom" constant="-55" id="KV9-Jq-YOb"/>
-                            <constraint firstItem="OW3-FS-EwC" firstAttribute="leading" secondItem="FUd-mV-fh2" secondAttribute="leadingMargin" constant="-11" id="MQ7-Hz-Y9a"/>
-                            <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="FUd-mV-fh2" secondAttribute="top" id="csJ-pV-e3M"/>
-                            <constraint firstAttribute="trailing" secondItem="6B9-FN-7F4" secondAttribute="trailing" id="e5R-Ug-gIJ"/>
-                            <constraint firstItem="6B9-FN-7F4" firstAttribute="leading" secondItem="FUd-mV-fh2" secondAttribute="leading" id="eSZ-qi-Jyh"/>
-                            <constraint firstItem="OW3-FS-EwC" firstAttribute="top" secondItem="XvS-Hu-JjI" secondAttribute="bottom" constant="3" id="hwL-Zc-F3g"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="leading" secondItem="FUd-mV-fh2" secondAttribute="leadingMargin" constant="-20" id="Wlz-zI-lmT"/>
+                            <constraint firstItem="I1h-VO-hFM" firstAttribute="top" secondItem="6B9-FN-7F4" secondAttribute="bottom" id="Yu1-Di-uxb"/>
+                            <constraint firstItem="OW3-FS-EwC" firstAttribute="leading" secondItem="FUd-mV-fh2" secondAttribute="leadingMargin" constant="-15" id="inc-Ti-o99"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="OW3-FS-EwC" secondAttribute="bottom" constant="-60" id="kCV-FT-Si9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6B9-FN-7F4" secondAttribute="trailing" constant="-20" id="kQb-Dt-NVP"/>
+                            <constraint firstItem="6B9-FN-7F4" firstAttribute="top" secondItem="FUd-mV-fh2" secondAttribute="topMargin" id="pVG-KD-gU1"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1069,11 +1068,11 @@
         <scene sceneID="JaO-Dt-tOu">
             <objects>
                 <tableViewController storyboardIdentifier="StatisticsTable" id="4wz-v2-VLN" customClass="StatisticsTableViewController" customModule="Pantarevir" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="102" sectionHeaderHeight="28" sectionFooterHeight="28" id="0k4-xW-0WN">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="102" sectionHeaderHeight="28" sectionFooterHeight="28" id="0k4-xW-0WN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="446"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <color key="separatorColor" red="0.90791266025641026" green="0.90791266025641026" blue="0.90791266025641026" alpha="0.4048491379310345" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" red="0.54160657050000005" green="0.54160657050000005" blue="0.54160657050000005" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -1082,7 +1081,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="102"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WnQ-VW-IJH" id="Dl3-aP-nmw">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="102"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="101.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="...värma din mat i" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Voe-9Y-xoC">
@@ -1107,7 +1106,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.11105769230769236" green="0.11105769230769236" blue="0.11105769230769236" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.11105769230769236" green="0.11105769230769236" blue="0.11105769230769236" alpha="0.0" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="0yb-U2-6Sb" secondAttribute="trailing" constant="10" id="4Y6-XB-gmw"/>
                                         <constraint firstItem="Voe-9Y-xoC" firstAttribute="trailing" secondItem="p2Z-hG-OYu" secondAttribute="trailing" id="P21-We-TGG"/>
@@ -1337,7 +1336,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <color key="separatorColor" white="1" alpha="0.40250538793103446" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.54160657050000005" green="0.54160657050000005" blue="0.54160657050000005" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -1377,6 +1376,7 @@
                                             </constraints>
                                         </imageView>
                                     </subviews>
+                                    <color key="backgroundColor" red="0.23559194711538467" green="0.23559194711538467" blue="0.23559194711538467" alpha="0.0" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstItem="P6d-zy-PuU" firstAttribute="top" secondItem="beo-Qy-AkV" secondAttribute="topMargin" constant="-11" id="Coy-Co-kNB"/>
                                         <constraint firstItem="P6d-zy-PuU" firstAttribute="centerY" secondItem="Z6Q-zg-dc2" secondAttribute="centerY" id="D8U-cL-hQ5"/>
@@ -1390,7 +1390,7 @@
                                         <constraint firstItem="P6d-zy-PuU" firstAttribute="leading" secondItem="VZM-IV-RXy" secondAttribute="trailing" id="sfa-je-i7H"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.49539331896551725" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="amountLabel" destination="Vfw-3Q-kzQ" id="s0e-Gw-v5O"/>
                                     <outlet property="nameLabel" destination="Z6Q-zg-dc2" id="kOA-X5-QqO"/>
@@ -1595,8 +1595,8 @@
     </scenes>
     <resources>
         <image name="arrow_yellow" width="82" height="82"/>
+        <image name="back_arrow" width="128" height="128"/>
         <image name="back_arrow copy" width="82" height="82"/>
-        <image name="back_arrow_dropshadow copy" width="100" height="100"/>
         <image name="bg_blur" width="2593" height="3000"/>
         <image name="bg_moreblur" width="2362" height="1581"/>
         <image name="bg_new" width="2593" height="3000"/>
